practices/kubernetes/traefik-ingress/traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.nginx.io
      http:
        paths:
          - path: /
            backend:
              service:
                name: nginx
                port:
                  - name: nginxDefault
                    number: 80
    - host: traefik.frontend.io
      http:
        paths:
          - path: /
            backend:
              service:
                name: frontend
                port:
                  - name: frontend
                    number: 80
